--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -28,6 +28,7 @@ jobs:
       run:
         shell: bash
     strategy:
+      fail-fast: true
       matrix:
         CMAKE: [3.26.4]
         COMPILER:
@@ -368,6 +369,7 @@ jobs:
       run:
         shell: pwsh
     strategy:
+      fail-fast: true
       matrix:
         VER: [v142, v143, clangcl]
         GEN: [Visual Studio 17 2022, Ninja Multi-Config]
@@ -447,7 +449,7 @@ jobs:
 
     - name: Install dependencies (vcpkg)
       if: matrix.DEPS == 'vcpkg' && steps.vcpkg-install.outputs.cache-hit != 'true'
-      run: C:\vcpkg\vcpkg.exe --triplet=x64-windows install sfml tclap glm glew stb
+      run: C:\vcpkg\vcpkg.exe --triplet=x64-windows install freetype sfml tclap glm glew stb
 
     - name: Set up compiler flags
       run: |
@@ -629,6 +631,7 @@ jobs:
       run:
         shell: bash
     strategy:
+      fail-fast: true
       matrix:
         GEN:
         - Xcode
@@ -738,6 +741,7 @@ jobs:
       run:
         shell: bash
     strategy:
+      fail-fast: true
       matrix:
         #os: [ubuntu-latest, macos-latest]
         os: [ubuntu-latest]
